WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103643
[Chromium] Animation updates fail when using a canvas as a CSS backround-image style with -webkit-canvas
https://bugs.webkit.org/show_bug.cgi?id=103643
Summary
[Chromium] Animation updates fail when using a canvas as a CSS backround-imag...
Justin Novosad
Reported
2012-11-29 08:30:06 PST
Related chromium bug:
http://code.google.com/p/chromium/issues/detail?id=161699
A div using a background-image that references a 2D canvas is not getting re-rendered when the canvas contents change. This is an issue with the CC tiled layer not receiving the appropriate invalidation.
Attachments
Patch
(5.39 KB, patch)
2012-11-29 11:22 PST
,
Justin Novosad
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Novosad
Comment 1
2012-11-29 11:22:49 PST
Created
attachment 176767
[details]
Patch
Stephen White
Comment 2
2012-11-30 13:02:05 PST
Comment on
attachment 176767
[details]
Patch OK. r=me
WebKit Review Bot
Comment 3
2012-11-30 13:12:22 PST
Comment on
attachment 176767
[details]
Patch Clearing flags on attachment: 176767 Committed
r136262
: <
http://trac.webkit.org/changeset/136262
>
WebKit Review Bot
Comment 4
2012-11-30 13:12:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug